--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -1,6 +1,6 @@
 <div id="<%= dom_id project %>">
   <h2><%= project.name %></h2>
-  
+
   <p>
     <strong>Status:</strong>
     <%= project.status %>
@@ -16,13 +16,13 @@
   <% if project.readme_url.present? %>
   <p>
     <strong>Readme:</strong>
-    <%= link_to project.readme_url, project.readme_url, target: "_blank" %>
+    <%= external_link_to project.readme_url, project.readme_url %>
   </p>
   <% end %>
 
   <p>
     <strong>GitHub Repo:</strong>
-    <%= link_to project.repository_url, project.repository_url, target: "_blank" %>
+    <%= external_link_to project.repository_url, project.repository_url %>
   </p>
 
   <p>
