--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -1,4 +1,4 @@
 /* Styles for Home views */
 
 /* Add controller/view-specific rules here. */
-.home-placeholder { display: block; }
+body.home .home-placeholder { display: block; }
